syntax = "proto3";

option csharp_namespace = "grpcArachne";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
service LoginToken {
  rpc GetLoginToken(LoginTokenRequest) returns (LoginTokenReturns);
}

message LoginTokenRequest{
	string UserName = 1;
	string UserPassword = 2;
}

message LoginTokenReturns{
	string Token = 1;
	int64 IdUser = 2;
	int64 IdSupplier= 3;
	string NamaLengkap = 4;
	google.protobuf.StringValue NamaPanggilan = 5;
	string UserName = 6;
}